<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            style="@style/QuestionTitle" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one_title"
            style="@style/QuestionTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question_one" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_one_answer_one"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radiobutton_lion"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_one_answer_two"
                android:textSize="16sp" />

            <RadioButton
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_one_answer_three"
                android:textSize="16sp" />

            <RadioButton
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_one_answer_four"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_two_title"
            style="@style/QuestionTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question_two" />

        <CheckBox
            android:id="@+id/checkbox_flourish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/question_two_answer_one"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_whistle_bells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/question_two_answer_two"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_ollivanders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/question_two_answer_three"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_trelawney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/question_two_answer_four"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_three_title"
            style="@style/QuestionTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question_three" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_three_answer_one"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_three_answer_two"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radiobutton_lumos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_three_answer_three"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_three_answer_four"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_four_title"
            style="@style/QuestionTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question_four" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_four_answer_one"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_four_answer_two"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_four_answer_three"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radiobutton_james"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/question_four_answer_four"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/check_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_button" />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="" />

    </LinearLayout>
</ScrollView>